force-app/main/default/objects/CigaretteModule__c/CigaretteModule__c.object-meta.xml
<CustomObject>
    <label>CigaretteModule</label>
    <nameField>
        <displayFormat>CM{0000}</displayFormat>
        <label>CigaretteModule Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CigaretteModules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>