force-app/main/default/objects/CigaretteModule__c/fields/Cigarette_Code__c.field-meta.xml
<CustomField>
    <fullName>Cigarette_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cigarette Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>