force-app/main/default/objects/CigaretteModule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>