force-app/main/default/objects/CigaretteModule__c/fields/ProductLineCode__c.field-meta.xml
<CustomField>
    <fullName>ProductLineCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProductLineCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>