force-app/main/default/objects/CigaretteModule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cigarette_Code__c</columns>
    <columns>ProductLineCode__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cigarette_Code__c</field>
        <operation>contains</operation>
        <value>4B3</value>
    </filters>
    <label>All</label>
</ListView>